# HAInit_MA

./: CMakeLists.txt  HAPipeline.cpp  README.md
HAInit/: Analysis_numeric.hpp  Edgefitting.hpp  Est_overlop.hpp  Global2clus.hpp  Graph_Theory.hpp  HAPipeline.hpp  Initmotion.hpp  L1_IRLS.hpp  NewL1_IRLS.hpp  PointCloud_Processing.hpp  ReadWrite_RelMatrixfile.cpp  ReadWrite_RelMatrixfile.hpp  Reg_definition.cpp  Reg_definition.hpp  show_model.hpp
imagedata/BunnyData/: Bunny_Groundtruth.txt  Bunny_ICPAns.txt  Bunnyoverlop.txt
imagedata/Bunny_PCD/: Bunny13.pcd  Bunny14.pcd  Bunny15.pcd  Bunny16.pcd  Bunny17.pcd  Bunny18.pcd  Bunny19.pcd  Bunny21.pcd
